--- a/index.html
+++ b/index.html
@@ -27,55 +27,4 @@
 
         <label for="seleccionProteinas">Selecciona Proteínas:</label><br>
         <input type="checkbox" value="Pollo Desmechado"> Pollo Desmechado<br>
-        <input type="checkbox" value="Pollo Champiñones"> Pollo Champiñones<br>
-        <input type="checkbox" value="Criolla"> Criolla<br>
-        <input type="checkbox" value="Carne Desmechada"> Carne Desmechada<br>
-        <input type="checkbox" value="Chorizo Santarosano"> Chorizo Santarosano<br>
-        <input type="checkbox" value="Chorizo Mexicano"> Chorizo Mexicano<br>
-        <input type="checkbox" value="Carne Asada"> Carne Asada<br>
-        <input type="checkbox" value="Queso Campesino"> Queso Campesino<br>
-        <input type="checkbox" value="Salchicha"> Salchicha<br>
-        <input type="checkbox" value="Carne de Hamburguesa"> Carne de Hamburguesa<br>
-        <input type="checkbox" value="Huevo"> Huevo<br>
-
-        <label for="toppings">Frutas como Topping:</label><br>
-        <input type="checkbox" value="Banano"> Banano<br>
-        <input type="checkbox" value="Fresa"> Fresa<br>
-        <input type="checkbox" value="Mango"> Mango<br>
-
-        <label for="cantidadProducto">Cantidad de Arepas:</label>
-        <input type="number" id="cantidadProducto" min="1" max="6" value="1"><br>
-
-        <label for="adicionales">Adicionales:</label>
-        <input type="checkbox" id="ensaladaFrutas" value="3000"> Ensalada de Frutas - 3,000<br>
-        <input type="checkbox" id="salpicon" value="5000"> Salpicón - 5,000<br>
-        <input type="checkbox" id="yogurt" value="4000"> Yogurt con Topping - 4,000<br>
-
-        <label for="bebidas">Bebidas:</label>
-        <input type="number" id="cantidadPostabon" min="0" value="0"> Postabon<br>
-        <input type="number" id="cantidadTinto" min="0" value="0"> Tinto<br>
-        <input type="number" id="cantidadCafe" min="0" value="0"> Café<br>
-        <input type="number" id="cantidadPanela" min="0" value="0"> Panela<br>
-        <input type="number" id="cantidadCocacola" min="0" value="0"> Coca-Cola<br>
-        <input type="number" id="cantidadCocacolaZero" min="0" value="0"> Coca-Cola Zero<br>
-        <input type="number" id="cantidadAgua" min="0" value="0"> Agua<br>
-
-        <label for="cigarrillos">Cigarrillos:</label>
-        <input type="number" id="cantidadCigarrillos" min="0" value="0"> Cigarrillos<br>
-
-        <label for="hamQueso">¿Desea Jamón y Queso?</label>
-        <input type="checkbox" id="hamQueso"><br>
-
-        <button type="button" onclick="agregarPedido()">Agregar Pedido</button>
-    </form>
-
-    <h2>Resumen de Pedidos</h2>
-    <ul id="listaPedidos"></ul>
-
-    <h2>Inventario</h2>
-    <ul id="listaInventario"></ul>
-
-    <script src="script.js"></script>
-</body>
-</html>
-
+        <input 
